See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.98.00

              pambayer: Add -subchannel.

              pnmtosir: Set some possibly meaningless bits in output to zero
              so output is repeatable.

              libnetpbm, various programs: fix bug: bogus warning that a color
              specified on command line cannot be represented exactly with the
              maxval being used.  Introduced in Netpbm 10.83 (June 2018).

              pnmtopsnr: Fix typo in error message.  Always broken (pnmpsnr
              was new in Netpbm 9.6 (July 2000).

              ppmtoilbm: Remove -floyd (aka -fs) option, which hasn't worked
              in a long time if ever and is inappropriate function for this
              program.  And the broken code is inconsistent with new random
              number logic elsewhere in the package.

              ppmtoapplevol: Fix bug: reads from Standard Input even when you
              specify the input file argument.  Always broken.  (ppmtoapplevol
              was new in Netpbm 10.54 (March 2011).

              ppmtoapplevol: Fix bug: produces garbage with input image wider
              than 255.  Always broken.  (ppmtoapplevol was new in Netpbm
              10.54 (March 2011).

              pgmmedian: fix crash when median matrix is wider or higher than
              the input image.

              picttoppm: Fix incorrect output for 32 bit per pixel images
              that have only 3 planes.  Broken in Netpbm 10.34 (June 2006).

              pamendian: fix bogus "sample exceeds maxval" failure.
              Introduced in Netpbm 10.66 (March 2014).

              ppmtoilbm: Fix wild memory references and hangs with -map .
              Introduced in Netpbm 9.12 (March 2001).

              pgmtexture: Fix incorrect output.  Always broken.  (Program was
              added in primordial Netpbm in 1991).